Added StoryActivity for showing the details of a story.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         </activity>
 
         <activity
-            android:name=".NewsDetailActivity"
+            android:name=".StoryActivity"
             android:theme="@style/AppTheme.Detail" />
 
     </application>
