--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.github.liuguangqiang.mvp:library:1.0.4'
     compile 'com.squareup.okhttp:okhttp:2.0.0'
+    compile 'com.github.liuguangqiang.asyncokhttp:library:0.0.1'
 }
