--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,10 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'com.android.databinding'
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    buildToolsVersion "22"
 
     defaultConfig {
         applicationId "com.liuguangqiang.idaily"
@@ -27,7 +29,9 @@ dependencies {
     compile 'com.android.support:cardview-v7:22.2.0'
     compile 'com.github.liuguangqiang.aframework:library:1.0.2'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.github.liuguangqiang.mvp:library:1.0.4'
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'com.github.liuguangqiang.asyncokhttp:library:0.0.1'
+    compile 'com.jakewharton:butterknife:6.1.0'
+    apt 'com.bluelinelabs:logansquare-compiler:1.1.0'
+    apt 'com.android.databinding:compiler:1.0-rc0'
 }
