--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.liuguangqiang.idaily"
-        minSdkVersion 15
+        minSdkVersion 17
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -35,10 +35,11 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'com.android.support:cardview-v7:22.2.0'
     compile 'com.github.liuguangqiang.aframework:library:1.0.2'
-    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'com.github.liuguangqiang.asyncokhttp:library:0.0.1'
     compile 'com.jakewharton:butterknife:6.1.0'
     apt 'com.bluelinelabs:logansquare-compiler:1.1.0'
     apt 'com.android.databinding:compiler:1.0-rc0'
+    compile project(':mvitamio')
+    compile 'com.github.bumptech.glide:glide:3.6.1'
 }
