--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,14 +4,18 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".app.DailyApplication"
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.act.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.Detail">
             <intent-filter>
@@ -20,11 +24,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name=".StoryActivity"
+            android:name=".ui.act.StoryActivity"
             android:theme="@style/AppTheme.Detail" />
-
+        <activity
+            android:name=".ui.act.TextActivity"
+            android:label="@string/title_activity_text" />
+        <activity
+            android:name=".ui.act.OtherActivity"
+            android:label="@string/title_activity_other"
+            android:theme="@style/AppTheme.TransparentActivity" />
     </application>
 
 </manifest>
