--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: rootProject.file('dependencies.gradle')
 
 buildscript {
     repositories {
         jcenter()
     }
     dependencies {
-//        classpath 'com.android.tools.build:gradle:1.0.0'
-
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
-        classpath "com.android.tools.build:gradle:1.3.0-beta2"
-        classpath "com.android.databinding:dataBinder:1.0-rc0"
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath "com.android.tools.build:gradle:2.1.0-alpha3"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,5 +17,11 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+
+
     }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
