Remove dependency butterknife.

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -8,23 +8,19 @@ ext {
     targetSdkVersion = 23
     buildToolsVersion = '23.0.2'
 
-    dependencies = [
+    compiles = [
             supportAppCompat    : 'com.android.support:appcompat-v7:23.1.1',
             supportDesgin       : 'com.android.support:design:23.1.1',
             supportRecyclerView : 'com.android.support:recyclerview-v7:23.1.1',
             supportCardView     : 'com.android.support:appcompat-v7:23.1.1',
 
             logansquare         : 'com.bluelinelabs:logansquare:1.3.4',
-            logansquareCompiler : 'com.bluelinelabs:logansquare-compiler:1.3.4',
             logansquareConverter: "com.github.aurae.retrofit2:converter-logansquare:1.4.0",
 
             glide               : 'com.github.bumptech.glide:glide:3.6.1',
-
             gson                : 'com.google.code.gson:gson:2.5',
-            butterknife         : 'com.jakewharton:butterknife:7.0.1',
-
             dagger              : 'com.google.dagger:dagger:2.0.2',
-            daggerCompiler      : 'com.google.dagger:dagger-compiler:2.0.2',
+
             eventbus            : 'de.greenrobot:eventbus:3.0.0-beta1',
             rxandroid           : 'io.reactivex:rxandroid:1.0.1',
             rxjava              : 'io.reactivex:rxjava:1.0.14',
@@ -39,6 +35,15 @@ ext {
             guangqiangUtils     : 'com.liuguangqiang.support:utils:0.1.0',
 
             viewpagerIndicator  : "com.mcxiaoke.viewpagerindicator:library:2.4.1"
+    ]
+
+    provides = [
+            daggerCompiler: 'com.google.dagger:dagger-compiler:2.0.2',
+            annotation    : 'org.glassfish:javax.annotation:10.0-b28'
+    ]
+
+    apts = [
+            logansquareCompiler: 'com.bluelinelabs:logansquare-compiler:1.3.4'
     ]
 
 }
