--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'me.tatarka.retrolambda'
 
 def ext = rootProject.ext
 
@@ -10,6 +11,11 @@ def releaseTime() {
 android {
     compileSdkVersion ext.compileSdkVersion
     buildToolsVersion ext.buildToolsVersion
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 
     defaultConfig {
         applicationId ext.applicationId
@@ -52,7 +58,7 @@ android {
         release {
             signingConfig signingConfigs.release
             zipAlignEnabled true
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 
             applicationVariants.all { variant ->
@@ -72,39 +78,36 @@ android {
         enabled = true
     }
 
-//    compileOptions {
-//        sourceCompatibility JavaVersion.VERSION_1_8
-//        targetCompatibility JavaVersion.VERSION_1_8
-//    }
 }
 
 dependencies {
 
-    def dependencies = ext.dependencies
+    def compiles = ext.compiles
+    def provides = ext.provides
+    def apts = ext.apts
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile dependencies.supportAppCompat
-    compile dependencies.supportRecyclerView
-    compile dependencies.supportDesgin
-    compile dependencies.supportCardView
-    compile dependencies.glide
-    compile dependencies.butterknife
-    compile dependencies.logansquare
-    compile dependencies.viewpagerIndicator
-    compile dependencies.guangqiangWidgets
-    compile dependencies.guangqiangUtils
-    compile dependencies.retrofit
-    compile dependencies.retrofitAdapter
-    compile dependencies.okhttpLog
-    compile dependencies.logansquareConverter
-    compile dependencies.rxandroid
-    compile dependencies.rxjava
-    compile dependencies.eventbus
-    compile dependencies.dagger
+    compile compiles.supportAppCompat
+    compile compiles.supportRecyclerView
+    compile compiles.supportDesgin
+    compile compiles.supportCardView
+    compile compiles.glide
+    compile compiles.logansquare
+    compile compiles.viewpagerIndicator
+    compile compiles.guangqiangWidgets
+    compile compiles.guangqiangUtils
+    compile compiles.retrofit
+    compile compiles.retrofitAdapter
+    compile compiles.okhttpLog
+    compile compiles.logansquareConverter
+    compile compiles.rxandroid
+    compile compiles.rxjava
+    compile compiles.eventbus
+    compile compiles.dagger
 
-    provided dependencies.daggerCompiler
-    apt dependencies.logansquareCompiler
+    provided provides.daggerCompiler
+    provided provides.annotation
 
-    provided 'org.glassfish:javax.annotation:10.0-b28'
+    apt apts.logansquareCompiler
 }
