--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,14 @@ apply from: rootProject.file('dependencies.gradle')
 buildscript {
     repositories {
         jcenter()
+
+        mavenCentral()
     }
     dependencies {
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        classpath "com.android.tools.build:gradle:2.1.0-alpha3"
+        classpath 'com.android.tools.build:gradle:2.1.0'
         classpath 'me.tatarka:gradle-retrolambda:3.2.0'
+        classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
