--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'com.jakewharton.hugo'
 
 def ext = rootProject.ext
 
@@ -77,7 +78,6 @@ android {
     dataBinding {
         enabled = true
     }
-
 }
 
 dependencies {
@@ -105,6 +105,8 @@ dependencies {
     compile compiles.rxjava
     compile compiles.eventbus
     compile compiles.dagger
+
+    compile 'com.jakewharton.timber:timber:4.1.2'
 
     provided provides.daggerCompiler
     provided provides.annotation
