--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,17 @@ buildscript {
         jcenter()
 
         mavenCentral()
+
+        maven {
+            url "http://maven.bughd.com/public"
+        }
     }
     dependencies {
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'com.android.tools.build:gradle:2.1.0'
         classpath 'me.tatarka:gradle-retrolambda:3.2.0'
         classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
+        classpath 'im.fir:gradle-fir-publisher:1.0.2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
