--- a/daocloud.yml
+++ b/daocloud.yml
@@ -1,4 +1,4 @@
 image: daocloud.io/guangqiang/android
 
 script:
-    - ./gradlew app:publishApkRelease --stacktrace
+    - ./gradlew app:publishApkRelease
