--- a/daocloud.yml
+++ b/daocloud.yml
@@ -1,4 +1,5 @@
 image: daocloud.io/guangqiang/android
 
 script:
-    - ./gradlew clean build publishApkRelease
+    - ./gradlew clean build
+    - ./gradlew app:publishApkRelease
