--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -4,15 +4,15 @@ ext {
     versionName = "1.0.0"
 
     minSdkVersion = 15
-    compileSdkVersion = 25
-    targetSdkVersion = 25
+    compileSdkVersion = 30
+    targetSdkVersion = 30
     buildToolsVersion = '25.0.2'
 
     compiles = [
-            supportAppCompat    : 'com.android.support:appcompat-v7:25.2.0',
-            supportDesgin       : 'com.android.support:design:25.2.0',
-            supportRecyclerView : 'com.android.support:recyclerview-v7:25.2.0',
-            supportCardView     : 'com.android.support:appcompat-v7:25.2.0',
+            supportAppCompat    : 'androidx.appcompat:appcompat:1.0.0',
+            supportDesgin       : 'com.google.android.material:material:1.0.0',
+            supportRecyclerView : 'androidx.recyclerview:recyclerview:1.0.0',
+            supportCardView     : 'androidx.appcompat:appcompat:1.0.0',
 
             logansquare         : 'com.bluelinelabs:logansquare:1.3.4',
             logansquareConverter: "com.github.aurae.retrofit2:converter-logansquare:1.4.0",
