--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 apply from: rootProject.file('dependencies.gradle')
 
 buildscript {
+    ext.kotlin_version = '1.3.72'
     repositories {
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
 
@@ -14,6 +15,7 @@ buildscript {
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'me.tatarka:gradle-retrolambda:3.2.0'
         classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 //        classpath 'im.fir:gradle-fir-publisher:1.0.2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
