--- a/build.gradle
+++ b/build.gradle
@@ -4,17 +4,20 @@ apply from: rootProject.file('dependencies.gradle')
 buildscript {
     ext.kotlin_version = '1.3.72'
     repositories {
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/central' }
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
 
         google()
 
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.1'
+        classpath 'com.android.tools.build:gradle:7.0.0'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'me.tatarka:gradle-retrolambda:3.2.0'
-        classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 //        classpath 'im.fir:gradle-fir-publisher:1.0.2'
         // NOTE: Do not place your application dependencies here; they belong
@@ -24,11 +27,15 @@ buildscript {
 
 allprojects {
     repositories {
-        mavenCentral()
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/central' }
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
 
         google()
 
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        mavenCentral()
 
         maven { url "https://jitpack.io" }
 
