--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,7 +111,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.2.0'
 
     //RX
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
@@ -131,4 +131,5 @@ dependencies {
 
     implementation 'org.greenrobot:eventbus:3.2.0'
     implementation 'com.jakewharton.timber:timber:4.1.2'
+    implementation 'io.github.youth5201314:banner:2.2.2'
 }
