--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.act.MainActivity"
+            android:name=".feature.main.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.Detail">
             <intent-filter>
@@ -25,7 +25,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.act.StoryActivity"
+            android:name=".feature.detail.StoryActivity"
             android:theme="@style/AppTheme.Detail" />
     </application>
 
